@@ -73,7 +73,7 @@ print("Profiling dxfstr() speed")
 def create_dxf_drawing():
     dwg = dxf.drawing() # create a drawing
     # add the active viewport
-    dwg.add_viewport(
+    dwg.add_vport(
         '*Active',
         center_point=(0, 0),
         height = 30,
