@@ -6,6 +6,12 @@ Version 1.0.3 - ...
 
   * rewrite of DXF-String building process
   * refactored MText class
+  * renamed the Viewport table entry to VPort and DXFEngine.viewport to
+    DXFEngine.vport. This is necessary to implement the Viewport Entity, which
+    can create Viewports in the paper space.
+  * view docs also on dxfwrite.readthedocs.org
+  * added some docs
+  * changed clothoid mirror parameters
 
 Version 1.0.2 - 08 December 2011
 
